# Zebaro-Core-Bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  issue-ops.yml
app/: config.py  main.py
app/db/: __init__.py  client.py
app/ds/: main.py
app/ds/cogs/: commands.py  events.py
app/ds/commands/: help.py
app/scheduler/: __init__.py  scheduler.py
app/services/docker_service/: container.py  manager.py  project.py
app/services/github/: github_manager.py  github_repo_event.py  github_repo_webhook.py
app/services/job_searcher/: job_container.py  job_filter.py  job_parser.py  job_to_text.py  job_urls.py
app/services/job_searcher/listeners/: base_listeners.py  djinni_listeners.py  dou_listeners.py  jooble_listeners.py  no_fluff_jobs_listeners.py  robota_ua_listeners.py  work_ua_listeners.py
app/services/speedtest_service/: manager.py
app/tg/: main.py
app/tg/handlers/: get_chat_id.py  start.py
app/tg/handlers/admin/: check_server.py  get_job_openings.py  mongo.py  server_speed.py  server_status.py
app/tg/handlers/callbacks/: docker.py
app/tg/keyboards/: docker.py
app/tg/middlewares/: admin_middleware.py  docker_middleware.py
app/tg/notification/: check_notification.py  job_notification.py
app/utils/: format_memory.py  format_time.py
app/webhooks/: __init__.py  main.py  setup.py
app/webhooks/routes/: endpoints.py  github.py  telegram.py
tests/: test_placeholder.py  test_utils.py
tests/services/docker_service/: test_container.py  test_manager.py  test_project.py
tests/services/github/: test_github_manager.py  test_github_repo_event.py  test_github_repo_webhook.py
tests/services/job_searcher/: test_job_container.py  test_job_filter.py  test_job_parser.py  test_job_to_text.py
